# gprofile

./: Cargo.toml  LICENSE-APACHE-2.0  README.md
.github/workflows/: publish.yml
src/: cli.rs  gprofile.rs  main.rs
