[package]
name = "gprofile"
version = "0.1.0"
edition = "2021"
description = "Quickly switch and manage multiple git user profiles."
authors = ["pjmp"]
keywords = ["cli", "gprofile", "git", "git-profile", "git-user"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pjmp/gprofile"
repository = "https://github.com/pjmp/gprofile"

[[bin]]
name = "git-profile"
path = "src/main.rs"
